add BOT_ICON parameter

--- a/enviroment_dev.yml
+++ b/enviroment_dev.yml
@@ -1,5 +1,6 @@
 OAUTH_TOKEN: 'xoxp-000000000000-000000000000-000000000000-0x0x0x0x0x0x0x0x0x0x0x0x0x0x0x0x'
 BOT_TOKEN: 'xoxb-000000000000-0x0x0x0x0x0x0x0x0x0x0x0x'
-HOOK_KEYWORD: 'test'
-REPLY_WORD: 'testreply'
-BOT_NAME: 'testman'
+HOOK_KEYWORD: 'poop'
+REPLY_WORD: ':poop: :poop: :poop:'
+BOT_NAME: 'poopman'
+BOT_ICON: ':sunglasses:'
