--- a/enviroment_prd.yml
+++ b/enviroment_prd.yml
@@ -3,3 +3,4 @@ BOT_TOKEN: 'xoxb-000000000000-0x0x0x0x0x0x0x0x0x0x0x0x'
 HOOK_KEYWORD: 'poop'
 REPLY_WORD: ':poop: :poop: :poop:'
 BOT_NAME: 'poopman'
+BOT_ICON: 'npb_tigers'
